--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Curso de Asincronismo con JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "aCallbackFunction": "node src/callback/challengeExplination.js"
   },
   "repository": {
     "type": "git",
