--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
   },
   "homepage": "https://github.com/Bernullys/Curso-Asincronismo-JavaScript#readme",
   "dependencies": {
-    "node-fetch": "^3.3.1",
+    "node-fetch": "^2.6.11",
     "xmlhttprequest": "^1.8.0"
+  },
+  "type": "module",
+  "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5"
   }
 }
